# zkml-framework-benchmarks

./: .gitignore  README.md  Scarb.toml  benchmark_file.sh  install_dep_run.sh
.github/: benchmarks.yaml  benchmarks.yml
.github/workflows/: benchmarks.yml
Giza/: Scarb.toml
Giza/src/: lin_reg_func.cairo  test.cairo
R0_zkVM/: .gitignore  Cargo.toml  benchmark_file.sh
R0_zkVM/methods/: Cargo.toml
R0_zkVM/methods/decision_tree/: Cargo.toml
R0_zkVM/methods/decision_tree/src/: main.rs
R0_zkVM/methods/guest/: Cargo.toml
R0_zkVM/methods/guest/src/: main.rs
R0_zkVM/methods/svm_classification/src/: main.rs
R0_zkVM/notebooks/decision_trees/: input.json  riscZero.ipynb
R0_zkVM/notebooks/linear_regressions/: ezkl.ipynb  riscZero.ipynb
R0_zkVM/notebooks/svm_classifications/: ezkl.ipynb  input.json  riscZero.ipynb
R0_zkVM/res/input-data/: svm_classification_data_bytes.json
R0_zkVM/src/: main.rs
R0_zkVM/tests/: benchmark_tests.rs
decision_trees/: ezkl.ipynb  input.json
linear_regressions/: ezkl.ipynb  input.json  riscZero.ipynb
methods/: Cargo.toml
methods/linear_regression/: Cargo.toml
methods/random_forest/: Cargo.toml
methods/svm_classification/: Cargo.toml
methods/svm_classification/src/: main.rs
methods/te_regression/: Cargo.toml
notebooks/: benchmark_analysis.ipynb
notebooks/decision_trees/: ezkl.ipynb
notebooks/linear_regressions/: ezkl.ipynb  orion.ipynb  riscZero.ipynb
notebooks/random_forests/: ezkl.ipynb  input.json  orion.ipynb  riscZero.ipynb
src/: main.rs
tests/: benchmark_tests.rs
(+17 files in other folders)
