[package]
name = "zkml-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = "0.19.1"
rmp-serde = "1.1"
serde_json = "1.0"
clap = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
# Using git dependency as a workaround for https://github.com/smartcorelib/smartcore/issues/267
smartcore = { git = "https://github.com/risc0/smartcore.git", rev = "4bd3cadd50ed988c45c239f5264c3e2c2af0a690", features = [
  "serde",
] }
smartcore-ml-methods = { path = "methods" }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]

[dev-dependencies]
criterion = {version = "0.3",  features = ["html_reports"]}
tempfile = "3.3.0"
lazy_static = "1.4.0"
mnist = "0.5"
seq-macro = "0.3.1"
test-case = "2.2.2"
tempdir = "0.3.7"
shellexpand = "3.1.0"
regex = "1.3.9"